[gd_scene load_steps=13 format=2]

[ext_resource path="res://UI/BG wpg.png" type="Texture" id=1]
[ext_resource path="res://UI/button scale.png" type="Texture" id=2]
[ext_resource path="res://Script/MainM.gd" type="Script" id=3]
[ext_resource path="res://Asset/Font/PressStart2P-Regular.ttf" type="DynamicFontData" id=4]
[ext_resource path="res://UI/OptionM.tscn" type="PackedScene" id=5]
[ext_resource path="res://UI/FPSLabel.tscn" type="PackedScene" id=6]
[ext_resource path="res://Asset/Font/SettingLabel.tres" type="DynamicFont" id=7]
[ext_resource path="res://UI/logo#1.png" type="Texture" id=8]
[ext_resource path="res://UI/option.png" type="Texture" id=9]

[sub_resource type="DynamicFont" id=4]
size = 150
outline_color = Color( 0, 0, 0, 1 )
font_data = ExtResource( 4 )

[sub_resource type="DynamicFont" id=2]
size = 40
font_data = ExtResource( 4 )

[sub_resource type="DynamicFont" id=3]
size = 20
font_data = ExtResource( 4 )

[node name="MainM" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 3 )

[node name="NinePatchRect" type="NinePatchRect" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0

[node name="BgWpg" type="Sprite" parent="NinePatchRect"]
show_behind_parent = true
position = Vector2( 512, 300 )
texture = ExtResource( 1 )

[node name="PeEnGe" type="Sprite" parent="NinePatchRect"]
position = Vector2( 279, 16 )
scale = Vector2( 0.357031, 0.233398 )
texture = ExtResource( 8 )
centered = false

[node name="PlayB" type="TextureButton" parent="NinePatchRect"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 379.0
margin_top = 291.0
margin_right = 635.0
margin_bottom = -53.0
rect_scale = Vector2( 0.2, 0.2 )
texture_normal = ExtResource( 2 )

[node name="Label" type="Label" parent="NinePatchRect/PlayB"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -300.0
margin_top = -75.0
margin_right = 300.0
margin_bottom = 75.0
custom_colors/font_color = Color( 0.984314, 0.992157, 0.898039, 1 )
custom_fonts/font = SubResource( 4 )
text = "Play"
align = 1
valign = 1

[node name="OptionB" type="TextureButton" parent="NinePatchRect"]
margin_left = 380.0
margin_top = 350.0
margin_right = 1660.0
margin_bottom = 606.0
rect_scale = Vector2( 0.2, 0.2 )
texture_normal = ExtResource( 2 )

[node name="Label" type="Label" parent="NinePatchRect/OptionB"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -450.0
margin_top = -75.0
margin_right = 450.0
margin_bottom = 75.0
custom_colors/font_color = Color( 0.984314, 0.992157, 0.898039, 1 )
custom_fonts/font = SubResource( 4 )
text = "Option"
align = 1
valign = 1

[node name="CreditB" type="TextureButton" parent="NinePatchRect"]
margin_left = 382.0
margin_top = 411.0
margin_right = 1662.0
margin_bottom = 667.0
rect_scale = Vector2( 0.2, 0.2 )
texture_normal = ExtResource( 2 )

[node name="Label" type="Label" parent="NinePatchRect/CreditB"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -450.0
margin_top = -75.0
margin_right = 450.0
margin_bottom = 75.0
custom_colors/font_color = Color( 0.984314, 0.992157, 0.898039, 1 )
custom_fonts/font = SubResource( 4 )
text = "Credit"
align = 1
valign = 1

[node name="ExitB" type="TextureButton" parent="NinePatchRect"]
margin_left = 380.0
margin_top = 472.0
margin_right = 1660.0
margin_bottom = 728.0
rect_scale = Vector2( 0.2, 0.2 )
texture_normal = ExtResource( 2 )

[node name="Label" type="Label" parent="NinePatchRect/ExitB"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -300.0
margin_top = -75.0
margin_right = 300.0
margin_bottom = 75.0
custom_colors/font_color = Color( 0.984314, 0.992157, 0.898039, 1 )
custom_fonts/font = SubResource( 4 )
text = "Exit"
align = 1
valign = 1

[node name="CreditM" type="Popup" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -450.0
margin_top = -96.0
margin_right = 450.0
margin_bottom = 254.0

[node name="Sprite" type="Sprite" parent="CreditM"]
position = Vector2( 445, 163.5 )
scale = Vector2( 0.757813, 0.397461 )
texture = ExtResource( 9 )

[node name="Label" type="Label" parent="CreditM"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -200.0
margin_top = -162.0
margin_right = 200.0
margin_bottom = -122.0
custom_fonts/font = SubResource( 2 )
text = "SUGAR RUSH"
align = 1

[node name="Label2" type="Label" parent="CreditM"]
anchor_left = 0.5
anchor_right = 0.5
margin_left = -160.0
margin_top = 67.0
margin_right = 160.0
margin_bottom = 87.0
custom_fonts/font = SubResource( 3 )
text = "Made by TEAM 10F"
align = 1

[node name="GridContainer" type="GridContainer" parent="CreditM"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 12.0
margin_top = 106.0
margin_right = -18.0
margin_bottom = -63.0
columns = 3

[node name="Label" type="Label" parent="CreditM/GridContainer"]
margin_right = 342.0
margin_bottom = 33.0
custom_fonts/font = ExtResource( 7 )
text = "Hiroya Herdinanto"

[node name="Label2" type="Label" parent="CreditM/GridContainer"]
margin_left = 354.0
margin_right = 552.0
margin_bottom = 33.0
size_flags_horizontal = 6
custom_fonts/font = ExtResource( 7 )
text = "52223600022"

[node name="Label3" type="Label" parent="CreditM/GridContainer"]
margin_left = 600.0
margin_right = 834.0
margin_bottom = 33.0
size_flags_horizontal = 6
custom_fonts/font = ExtResource( 7 )
text = "Game Designer"

[node name="Label4" type="Label" parent="CreditM/GridContainer"]
margin_top = 37.0
margin_right = 342.0
margin_bottom = 70.0
custom_fonts/font = ExtResource( 7 )
text = "Yoga Sandy"

[node name="Label5" type="Label" parent="CreditM/GridContainer"]
margin_left = 354.0
margin_top = 37.0
margin_right = 552.0
margin_bottom = 70.0
size_flags_horizontal = 6
custom_fonts/font = ExtResource( 7 )
text = "52223600023"

[node name="Label6" type="Label" parent="CreditM/GridContainer"]
margin_left = 627.0
margin_top = 37.0
margin_right = 807.0
margin_bottom = 70.0
size_flags_horizontal = 6
custom_fonts/font = ExtResource( 7 )
text = "Programmer"

[node name="Label7" type="Label" parent="CreditM/GridContainer"]
margin_top = 74.0
margin_right = 342.0
margin_bottom = 107.0
custom_fonts/font = ExtResource( 7 )
text = "Ardy Teguh Yulanda"

[node name="Label8" type="Label" parent="CreditM/GridContainer"]
margin_left = 354.0
margin_top = 74.0
margin_right = 552.0
margin_bottom = 107.0
size_flags_horizontal = 6
custom_fonts/font = ExtResource( 7 )
text = "52223600021"

[node name="Label9" type="Label" parent="CreditM/GridContainer"]
margin_left = 618.0
margin_top = 74.0
margin_right = 816.0
margin_bottom = 107.0
size_flags_horizontal = 6
custom_fonts/font = ExtResource( 7 )
text = "UI Designer"

[node name="Label10" type="Label" parent="CreditM/GridContainer"]
margin_top = 111.0
margin_right = 342.0
margin_bottom = 144.0
custom_fonts/font = ExtResource( 7 )
text = "Samudero Dirgantoro"

[node name="Label11" type="Label" parent="CreditM/GridContainer"]
margin_left = 354.0
margin_top = 111.0
margin_right = 552.0
margin_bottom = 144.0
size_flags_horizontal = 6
custom_fonts/font = ExtResource( 7 )
text = "52223600016"

[node name="Label12" type="Label" parent="CreditM/GridContainer"]
margin_left = 564.0
margin_top = 111.0
margin_right = 870.0
margin_bottom = 144.0
size_flags_horizontal = 6
custom_fonts/font = ExtResource( 7 )
text = "Characther Artist"

[node name="Label13" type="Label" parent="CreditM/GridContainer"]
margin_top = 148.0
margin_right = 342.0
margin_bottom = 181.0
custom_fonts/font = ExtResource( 7 )
text = "Bintang Bimantara"

[node name="Label14" type="Label" parent="CreditM/GridContainer"]
margin_left = 354.0
margin_top = 148.0
margin_right = 552.0
margin_bottom = 181.0
size_flags_horizontal = 6
custom_fonts/font = ExtResource( 7 )
text = "52223600025"

[node name="Label15" type="Label" parent="CreditM/GridContainer"]
margin_left = 564.0
margin_top = 148.0
margin_right = 870.0
margin_bottom = 181.0
size_flags_horizontal = 6
custom_fonts/font = ExtResource( 7 )
text = "Enviroment Artist"

[node name="OptionM" parent="." instance=ExtResource( 5 )]
margin_left = -399.0
margin_top = -98.0
margin_right = 401.0
margin_bottom = 252.0

[node name="FPSLabel" parent="." instance=ExtResource( 6 )]
visible = false
margin_right = 42.0

[connection signal="pressed" from="NinePatchRect/PlayB" to="." method="_on_PlayB_pressed"]
[connection signal="pressed" from="NinePatchRect/OptionB" to="." method="_on_OptionB_pressed"]
[connection signal="pressed" from="NinePatchRect/CreditB" to="." method="_on_CreditB_pressed"]
[connection signal="pressed" from="NinePatchRect/ExitB" to="." method="_on_ExitB_pressed"]
